# CleanUp

./: .gitignore  Clean_up.py  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cleanup/: __init__.py  __main__.py
cleanup/ai/: __init__.py  adaptive.py  backends.py  classify.py  images.py  local_embed.py  memory.py  ollama.py
cleanup/cli/: __init__.py  completion.py  main.py
cleanup/core/: __init__.py  collect.py  config.py  conflict.py  dedupe.py  detect.py  engine.py  events.py  history.py  ignore.py  manifest.py  organize.py  rules.py  runlog.py  schedule.py  stats.py  trash.py  watch.py
cleanup/web/: __init__.py  server.py  service.py
cleanup/web/static/: index.html
scripts/: build_binary.sh  calibrate_threshold.py  pyinstaller_entry.py
tests/: conftest.py  test_adaptive.py  test_ai.py  test_collect.py  test_config.py  test_conflict.py  test_dedupe.py  test_detect.py  test_engine.py  test_ignore.py  test_images.py  test_local_embed.py  test_organize.py  test_profiles_completion.py  test_rules.py  test_schedule.py  test_stats.py  test_watch.py  test_web.py
