[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanup-cli"
version = "0.2.0"
description = "Content-aware file organizer with MIME/magic-byte detection, smart tags, and safe undo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "rich>=13",
    "pydantic>=2",
    "send2trash>=1.8",
]

[project.optional-dependencies]
# Real content detection via libmagic. Falls back to extension-based detection if absent.
content = ["python-magic>=0.4.27"]
# Local web GUI.
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# In-process embedding backend for --ai (no Ollama server needed).
embed = ["fastembed>=0.3"]

# Build a standalone binary (scripts/build_binary.sh).
build = ["pyinstaller>=6"]
# Image content sub-sorting (--ai-images) via CLIP; fastembed pulls in Pillow.
image = ["fastembed>=0.3"]

dev = ["pytest>=7", "httpx>=0.27"]

[project.scripts]
cleanup = "cleanup.cli.main:main"
cleanup-web = "cleanup.web.server:main"

[tool.setuptools.packages.find]
include = ["cleanup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
